--- a/website/package.json
+++ b/website/package.json
@@ -12,8 +12,9 @@
     "docusaurus": "^1.14.6"
   },
   "dependencies": {
+    "highlight.js": "^11.3.1",
+    "katex": "^0.12.0",
     "react-bootstrap": "^1.4.0",
-    "remarkable-katex": "^1.1.7",
-    "katex": "^0.12.0"
+    "remarkable-katex": "^1.1.7"
   }
 }
