--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3"
 
 services:
-  crust-wiki:
-    image: crustio/crust-wiki
+  ares-wiki:
+    image: aresio/ares-wiki
     ports:
       - 3000:3000
       - 35729:35729
