--- a/website/package.json
+++ b/website/package.json
@@ -16,5 +16,17 @@
     "katex": "^0.12.0",
     "react-bootstrap": "^1.4.0",
     "remarkable-katex": "^1.1.7"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
